// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: User Create Page should disable submit when pristine 1`] = `
<Button
  disabled={true}
  submit={true}
  variant="primary"
>
  Add User
</Button>
`;

exports[`Page: User Create Page should render correctly by default 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Users",
      "to": "/account/users",
    }
  }
  title="Invite User"
>
  <Panel>
    <form
      onSubmit={[Function]}
    >
      <Panel.Section>
        <Stack>
          <p>
            An invitation will be sent to the email address you supply
          </p>
          <Field
            component={[Function]}
            label="Email address"
            name="email"
            normalize={[Function]}
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
          <Field
            allowSubaccountAssignment={false}
            component={[Function]}
            name="access"
          />
        </Stack>
      </Panel.Section>
      <Panel.Section>
        <Button
          disabled={false}
          submit={true}
          variant="primary"
        >
          Add User
        </Button>
      </Panel.Section>
    </form>
  </Panel>
</Page>
`;

exports[`Page: User Create Page should update submit button when submitting 1`] = `
<Button
  disabled={true}
  submit={true}
  variant="primary"
>
  Loading
</Button>
`;
